--- a/pom.xml
+++ b/pom.xml
@@ -71,14 +71,19 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>io.github.sashirestela</groupId>
-			<artifactId>simple-openai</artifactId>
-			<version>3.10.0</version>
-		</dependency>
-		<dependency>
 			<groupId>com.sendgrid</groupId>
 			<artifactId>sendgrid-java</artifactId>
 			<version>4.9.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 
